Get posts by user id
