# internal/router/users.go
@@ -1,10 +1,13 @@
 package router
 
 import (
+	"time"
+
 	"github.com/bwoff11/frens/internal/database"
 	"github.com/bwoff11/frens/internal/logger"
 	"github.com/bwoff11/frens/internal/response"
 	"github.com/bwoff11/frens/internal/service"
+	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 )
@@ -25,6 +28,7 @@ func (ur *UsersRepo) ConfigureRoutes(rtr fiber.Router) {
 	rtr.Get("/", ur.search)
 	rtr.Get("/self", ur.search)
 	rtr.Get("/:userID", ur.getByID)
+	rtr.Get("/:userID/posts", ur.getPosts)
 }
 
 // @Summary Search Users
@@ -124,6 +128,72 @@ func (ur *UsersRepo) delete(c *fiber.Ctx) error {
 // @Router /users/self/confirm [delete]
 func (ur *UsersRepo) confirmDelete(c *fiber.Ctx) error {
 	return nil
+}
+
+type GetPostsByUserIDRequest struct {
+	UserID uuid.UUID `json:"userID" validate:"required"`
+	Count  int       `json:"count" validate:"omitempty,min=1,max=100"`
+	Cursor string    `json:"cursor" validate:"omitempty,datetime=2006-01-02T15:04:05Z07:00"`
+}
+
+// @Summary Get Posts by User ID
+// @Description Get posts by user ID
+// @Tags Posts
+// @Accept json
+// @Produce json
+// @Param id path string true "User ID"
+// @Param count query int false "The number of posts to return."
+// @Param cursor query string false "Cursor to start the page from."
+// @Success 200
+// @Failure 400
+// @Failure 401
+// @Failure 500
+// @Security ApiKeyAuth
+// @Router /users/{userID}/posts [get]
+func (ur *UsersRepo) getPosts(c *fiber.Ctx) error {
+	logger.DebugLogRequestReceived("router", "users", "getPosts")
+
+	// Parsing userID from path
+	userID := c.Params("userID")
+	parsedUUID, err := uuid.Parse(userID)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).SendString("Invalid User ID")
+	}
+
+	// Parsing other parameters
+	var request GetPostsByUserIDRequest
+	err = c.QueryParser(&request)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).SendString(err.Error())
+	}
+	request.UserID = parsedUUID
+
+	// Create validator instance and validate the request
+	v := validator.New()
+	errList, err := validateRequest(v, request)
+	if err != nil {
+		// Send back the validation errors
+		return c.Status(fiber.StatusBadRequest).JSON(errList)
+	}
+
+	// Set default count if not provided
+	if request.Count == 0 {
+		request.Count = 25
+	}
+
+	// Set default cursor if not provided
+	var cursor time.Time
+	if request.Cursor == "" {
+		cursor = time.Now()
+	} else {
+		cursor, err = time.Parse(time.RFC3339, request.Cursor)
+		if err != nil {
+			return c.Status(fiber.StatusBadRequest).SendString("Invalid cursor")
+		}
+	}
+
+	// Pass the parameters to the GetByUserID function
+	return ur.Srv.Posts.GetByUserID(c, &request.UserID, cursor, request.Count)
 }
 
 // @Summary Block User
